[package]
name = "sf-ui-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["default", "bevy_ui", "bevy_text", "bevy_sprite"] }
bevy_input = { version = "0.14.2" }
bevy_reflect = { version = "0.14.2", features = ["bevy"] }
bevy_egui = { version = "0.27.1" }
egui = { version = "0.27.1" }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
